--- a/src/components/Bar.less
+++ b/src/components/Bar.less
@@ -1,11 +1,6 @@
 .Bar__bar {
-    // margin: 0 3px 3px 0;
     background-color: #006666;
-    // font-size: 23px;
-    // width: 50px;
     height: 10px;
     margin: 2px;
-    // display: inline-flex;
-    // justify-content: center;
-    // align-items: center;
+    width: 100%;
 }
