main element control

--- a/src/components/SortInstance/Bar.less
+++ b/src/components/SortInstance/Bar.less
@@ -1,5 +1,11 @@
-.Bar__bar {
-    background-color: #006666;
+.Bar__bar_unsorted {
     height: 6px;
-    margin: 1px;
+    margin-top: 1px;
+    background-color: #066;
+}
+
+.Bar__bar_sorted {
+    height: 6px;
+    margin-top: 1px;
+    background-color: #286090;
 }
